# agentic-apps

./: README.md
.github/workflows/: conventional_commits.yml  hub_push.yml
api_bridge_agent_demos/mcp/deploy/: api_bridge_mcp_demo_manifest.json
email_reviewer/: README.md  agent.json  pyproject.toml
email_reviewer/deploy/: email_reviewer.json
mailcomposer/: README.md  agent.json  pyproject.toml
mailcomposer/deploy/: mailcomposer.json
marketing-campaign/: pyproject.toml
marketing-campaign/deploy/: marketing-campaign.json
marketing-campaign/src/marketing_campaign/: app.py  email_reviewer.py  generate_manifest.py  gradio_ui.py  mailcomposer.py  main_acp_client.py  main_langgraph.py  state.py
network-of-assistants/: .env-example  .gitignore  CONTRIBUTING.md  docker-compose.yaml  otel-collector-config.yaml
network-of-assistants/.github/: pull_request_template.md  settings.yml
network-of-assistants/.github/workflows/: lint.yml
network-of-assistants/deploy/kubernetes/network-of-assistants/: Chart.yaml
network-of-assistants/deploy/kubernetes/network-of-assistants/templates/file-assistant/: deployment.yaml  pvc.yaml
network-of-assistants/deploy/kubernetes/network-of-assistants/templates/slim/: _helpers.tpl  configmap.yaml  deployment.yaml
network-of-assistants/deploy/kubernetes/network-of-assistants/templates/user-proxy/: _helpers.tpl
network-of-assistants/deploy/kubernetes/network-of-assistants/templates/web-surfer/: _helpers.tpl
network-of-assistants/dir/datamodels/: web-surfer.json
network-of-assistants/noa-file-assistant/: main.py  pyproject.toml
network-of-assistants/noa-math-assistant/: Dockerfile  llm.py  pyproject.toml
network-of-assistants/noa-moderator/: Dockerfile  main.py  pyproject.toml
network-of-assistants/noa-user-proxy/: chat.py  main.py
network-of-assistants/noa-web-surfer/: Dockerfile  pyproject.toml
network_of_assistants/: CHANGELOG.md  MAINTAINERS.md  README.md  SECURITY.md  docker-compose.yaml  pyproject.toml
network_of_assistants/.github/: dependabot.yml
network_of_assistants/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
network_of_assistants/ads/datamodels/: catalyst.json  meraki.json  moderator.json  splunk.json  thousandeyes.json  webex.json
network_of_assistants/agp/: pyproject.toml
network_of_assistants/agp/agp/: __init__.py
network_of_assistants/deploy/kubernetes/network-of-assistants/: .helmignore  Chart.yaml  values.yaml
network_of_assistants/deploy/kubernetes/network-of-assistants/templates/: _helpers.tpl
network_of_assistants/deploy/kubernetes/network-of-assistants/templates/file-assistant/: _helpers.tpl  deployment.yaml  llm_secret.yaml  rag_secret.yaml  serviceaccount.yaml
network_of_assistants/deploy/kubernetes/network-of-assistants/templates/math-assistant/: _helpers.tpl  deployment.yaml  llm_secret.yaml  serviceaccount.yaml
network_of_assistants/deploy/kubernetes/network-of-assistants/templates/moderator/: _helpers.tpl  deployment.yaml  llm_secret.yaml  serviceaccount.yaml
network_of_assistants/deploy/kubernetes/network-of-assistants/templates/slim/: configmap.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
network_of_assistants/deploy/kubernetes/network-of-assistants/templates/user-proxy/: deployment.yaml  service.yaml  serviceaccount.yaml
network_of_assistants/deploy/kubernetes/network-of-assistants/templates/web-surfer/: deployment.yaml  llm_secret.yaml  serviceaccount.yaml
network_of_assistants/dir/datamodels/: file-assistant.json  math-assistant.json
network_of_assistants/moderator/: agent.py  evaluator.py  main.py  pyproject.toml
network_of_assistants/noa-file-assistant/: Dockerfile  README.md  main.py  pyproject.toml  util.py
network_of_assistants/noa-math-assistant/: Dockerfile  agent.py  main.py  pyproject.toml
network_of_assistants/noa-moderator/: Dockerfile  README.md  agent.py  llm.py  main.py  pyproject.toml
network_of_assistants/noa-slim/: pyproject.toml  slim-config.yaml
network_of_assistants/noa-slim/slim/: __init__.py
network_of_assistants/noa-user-proxy/: Dockerfile  README.md  chat.py  main.py  pyproject.toml
network_of_assistants/noa-web-surfer/: Dockerfile  llm.py  main.py  pyproject.toml
network_of_assistants/pdf_assistant/: main.py  pyproject.toml
network_of_assistants/user_proxy/: main.py  pyproject.toml
tutorials/02-weather-vibes-agent/: 00-overview.md  07-adding-galileo-evaluation.md  99-troubleshooting.md  README.md
tutorials/02-weather-vibes-agent/venv-py312/: pyvenv.cfg
tutorials/02-weather-vibes-agent/weather_vibes/: .env.example  __init__.py  client_example.py  experiment_example.py  main.py  requirements.txt
tutorials/02-weather-vibes-agent/weather_vibes/agent/: __init__.py  weather_vibes_agent.py
tutorials/02-weather-vibes-agent/weather_vibes/tools/: __init__.py  weather_tool.py
weather_vibes_agp/tutorials/02-weather-vibes-agent/weather_vibes/: requirements.txt
