[project]
name = "mailcomposer"
version = "0.1.0"
description = "Composes an email by collecting details through continuous user interaction until confirmation, then returns the finalized email text."
authors = [
    {name="Giovanni Conte",email="giconte@cisco.com"}
]
readme = "README.md"
requires-python =  ">=3.9.0,<4.0"
dependencies = [
    "langchain >= 0.3.17",
    "langgraph >= 0.3.5",
    "langchain-openai >= 0.3.3",
    "jinja2 >= 3.1.5",
    "python-dotenv >= 1.0.1",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
